--- a/jekyll/Dockerfile
+++ b/jekyll/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu
 MAINTAINER Moon Yue <luna825@qq.com>
 ENV REFRESHED 2016-10-29
 RUN apt-get -y update && apt-get -y install ruby ruby-dev make nodejs
-RUN gem install --no-rdoc --no-ri jekyll -v 2.5.3
+RUN gem install jekyll
 VOLUME /data
 VOLUME /var/www/html
 WORKDIR /data
